[gd_scene load_steps=19 format=3 uid="uid://dlvvpnvysmwua"]

[ext_resource type="Script" path="res://scenes/1_cinematic.gd" id="1_m87lg"]
[ext_resource type="Texture2D" uid="uid://bns2fxafdvhlb" path="res://assets/images/cinematics/cinematic-grandma-2.png" id="1_ww74i"]
[ext_resource type="Texture2D" uid="uid://fny5cqilcah5" path="res://assets/images/cinematics/cinematic-grandma-3.png" id="3_jbep2"]
[ext_resource type="Texture2D" uid="uid://blh7xjfv36pl0" path="res://assets/images/cinematics/cinematic-grandma-4.png" id="4_158b1"]
[ext_resource type="Texture2D" uid="uid://b5sbwe7uwb765" path="res://assets/images/cinematics/cinematic-grandma-5.png" id="5_v6k1p"]
[ext_resource type="Texture2D" uid="uid://ddq5lo5nad0sv" path="res://assets/images/cinematics/cinematic-grandma-6.png" id="6_yixj2"]
[ext_resource type="Texture2D" uid="uid://hat5ttooshsv" path="res://assets/images/cinematics/cinematic-grandma-7.png" id="7_p11cb"]
[ext_resource type="Texture2D" uid="uid://c8gjc62j8vbde" path="res://assets/images/cinematics/cinematic-grandma-8.png" id="8_hlcns"]
[ext_resource type="AudioStream" uid="uid://cdbyjyb5ljg2v" path="res://assets/audios/1cinematic-1.ogg" id="9_xd0m8"]
[ext_resource type="AudioStream" uid="uid://br5h3okqgrx8y" path="res://assets/audios/1cinematic-2.ogg" id="10_uos36"]
[ext_resource type="AudioStream" uid="uid://dh1syx3dp2hih" path="res://assets/audios/1cinematic-3.ogg" id="11_qk8ll"]
[ext_resource type="AudioStream" uid="uid://dpvm6xrr2dwst" path="res://assets/audios/1cinematic-4.mp3" id="12_hd78i"]
[ext_resource type="AudioStream" uid="uid://bbcutpmlqwse2" path="res://assets/audios/1cinematic-5.ogg" id="13_jsrfb"]
[ext_resource type="AudioStream" uid="uid://7youy8idowht" path="res://assets/audios/1cinematic-6.ogg" id="14_13rgt"]
[ext_resource type="AudioStream" uid="uid://yqc0b3ck6ur2" path="res://assets/audios/1cinematic-7.ogg" id="15_p0ed5"]

[sub_resource type="Animation" id="Animation_q5cvr"]
resource_name = "new_animation"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [38, 48]
}

[sub_resource type="Animation" id="Animation_hitce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [38]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1r2px"]
_data = {
"RESET": SubResource("Animation_hitce"),
"new_animation": SubResource("Animation_q5cvr")
}

[node name="1cinematic" type="Sprite2D"]
position = Vector2(963.978, 575.937)
scale = Vector2(8.483, 8.483)
script = ExtResource("1_m87lg")
cinematics = Array[Texture2D]([ExtResource("1_ww74i"), ExtResource("3_jbep2"), ExtResource("4_158b1"), ExtResource("5_v6k1p"), ExtResource("6_yixj2"), ExtResource("7_p11cb"), ExtResource("8_hlcns")])

[node name="1cinematic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xd0m8")

[node name="1cinematic2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_uos36")

[node name="1cinematic3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_qk8ll")

[node name="1cinematic4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_hd78i")

[node name="1cinematic5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_jsrfb")

[node name="1cinematic6" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_13rgt")

[node name="1cinematic7" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_p0ed5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -130.0
offset_right = 245.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(244, 33)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 38
text = "Click to continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Label"]
libraries = {
"": SubResource("AnimationLibrary_1r2px")
}
autoplay = "new_animation"
